--- a/debian/rules
+++ b/debian/rules
@@ -13,4 +13,7 @@
 	dh $@ 
 
 override_dh_strip:
-	dh_strip --dbg-package=switchboard-plug-bluetooth-dbg
+	dh_strip --dbgsym-migration='switchboard-plug-bluetooth-dbg (<< 0.3.2)'
+
+override_dh_missing:
+	dh_missing --fail-missing
