agent: Create a new agent with the plug

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ plug_files = files(
     'DeviceRow.vala',
     'Services/Manager.vala',
     'Services/Device.vala',
+    'Services/Agent.vala',
     'Services/Adapter.vala'
 )
 
