--- a/data/io.elementary.switchboard-plug-bluetooth.appdata.xml.in
+++ b/data/io.elementary.switchboard-plug-bluetooth.appdata.xml.in
@@ -4,6 +4,11 @@
   <extends>io.elementary.switchboard</extends>
   <name>Bluetooth</name>
   <summary>Configure Bluetooth Settings</summary>
+  <screenshots>
+      <screenshot type="default">
+          <image>https://raw.githubusercontent.com/elementary/switchboard-plug-bluetooth/master/data/screenshot.png</image>
+      </screenshot>
+  </screenshots>
   <url type="homepage">https://elementary.io</url>
   <url type="bugtracker">https://github.com/elementary/switchboard-plug-bluetooth/issues</url>
   <metadata_license>CC0-1.0</metadata_license>
