Add pairing Agent (#50)

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,7 +1,9 @@
 plug_files = files(
+    'PairDialog.vala',
     'Plug.vala',
     'MainView.vala',
     'DeviceRow.vala',
+    'Services/Agent.vala',
     'Services/Manager.vala',
     'Services/Device.vala',
     'Services/Adapter.vala'
@@ -16,7 +18,7 @@ shared_module(
         dependency('glib-2.0'),
         dependency('gio-2.0'),
         dependency('gobject-2.0'),
-        dependency('granite'),
+        dependency('granite', version: '>=5.2.4'),
         dependency('gtk+-3.0'),
         meson.get_compiler('vala').find_library('posix'),
         switchboard_dep
