--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -17,9 +17,12 @@ jobs:
         apt update
         apt install -y meson libgranite-dev libgtk-3-dev libswitchboard-2.0-dev valac
     - name: Build
+      env:
+        DESTDIR: out
       run: |
         meson build
         ninja -C build
+        ninja -C build install
 
   lint:
 
