--- a/data/io.elementary.switchboard.bluetooth.appdata.xml.in
+++ b/data/io.elementary.switchboard.bluetooth.appdata.xml.in
@@ -5,6 +5,11 @@
   <name>Bluetooth</name>
   <summary>Configure Bluetooth Settings</summary>
   <releases>
+    <release version="2.3.1" date="2020-02-25" urgency="medium">
+      <description>
+        <p>Updated translations</p>
+      </description>
+    </release>
     <release version="2.3.0" date="2019-10-31" urgency="medium">
       <description>
         <p>Pair with devices that require a password, key code, or confirmation</p>
