--- a/data/io.elementary.switchboard.bluetooth.appdata.xml.in
+++ b/data/io.elementary.switchboard.bluetooth.appdata.xml.in
@@ -7,6 +7,19 @@
   <icon type="stock">bluetooth</icon>
   <translation type="gettext">bluetooth-plug</translation>
   <releases>
+    <release version="2.3.3" date="2020-10-08" urgency="medium">
+      <description>
+        <p>Fixes</p>
+        <ul>
+          <li>Fix crash on devices without Bluetooth</li>
+        </ul>
+        <p>Minor updates</p>
+        <ul>
+          <li>Move "forget device" button to each device row</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="2.3.2" date="2020-05-28" urgency="medium">
       <description>
         <p>Updated translations</p>
