--- a/data/io.elementary.switchboard.bluetooth.appdata.xml.in
+++ b/data/io.elementary.switchboard.bluetooth.appdata.xml.in
@@ -6,7 +6,15 @@
   <summary>Configure Bluetooth Settings</summary>
   <icon type="stock">bluetooth</icon>
   <translation type="gettext">bluetooth-plug</translation>
-  <releases>
+  <releases>    
+    <release version="2.3.6" date="2021-07-13" urgency="medium">
+      <description>
+        <p>Minor updates</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="2.3.5" date="2021-03-09" urgency="critical">
       <description>
         <p>Security update</p>
