--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -6,16 +6,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     container:
-      image: elementary/docker:unstable
-    
+      image: elementary/docker:next-unstable
+
     steps:
     - uses: actions/checkout@v1
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y meson libgranite-dev libgtk-3-dev libswitchboard-2.0-dev valac
+        apt install -y meson libgranite-7-dev libgtk-4-dev libswitchboard-3-dev valac
     - name: Build
       env:
         DESTDIR: out
@@ -27,10 +27,10 @@ jobs:
   lint:
 
     runs-on: ubuntu-latest
-    
+
     container:
       image: valalang/lint
-      
+
     steps:
     - uses: actions/checkout@v1
     - name: Lint
