--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,17 @@
-Source: switchboard-plug-bluetooth
+Source: io.elementary.settings-bluetooth
 Section: x11
 Priority: optional
 Maintainer: elementary OS Team <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
                gettext,
-               libgranite-dev,
-               libswitchboard-2.0-dev,
+               libgranite-7-dev,
+               libswitchboard-3-dev,
                meson,
                valac (>= 0.22)
 Standards-Version: 4.1.1
 Homepage: https://github.com/elementary/switchboard-plug-bluetooth
 
-Package: switchboard-plug-bluetooth
+Package: io.elementary.settings-bluetooth
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Enhances: switchboard
