--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -1,6 +1,11 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 jobs:
   build:
@@ -11,7 +16,7 @@ jobs:
       image: elementary/docker:next-unstable
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Install Dependencies
       run: |
         apt update
@@ -21,7 +26,6 @@ jobs:
         DESTDIR: out
       run: |
         meson build
-        ninja -C build
         ninja -C build install
 
   lint:
