--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     container:
       image: elementary/docker:next-unstable
@@ -36,6 +36,6 @@ jobs:
       image: valalang/lint
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Lint
       run: io.elementary.vala-lint -d .
