--- a/data/meson.build
+++ b/data/meson.build
@@ -1,6 +1,6 @@
 i18n.merge_file(
-    input: 'bluetooth.appdata.xml.in',
-    output: 'io.elementary.settings.bluetooth.appdata.xml',
+    input: 'bluetooth.metainfo.xml.in',
+    output: 'io.elementary.settings.bluetooth.metainfo.xml',
     po_dir: join_paths(meson.source_root (), 'po', 'extra'),
     install_dir: join_paths(datadir, 'metainfo'),
     install: true
