--- a/src/meson.build
+++ b/src/meson.build
@@ -17,7 +17,7 @@ shared_module(
     plug_files,
     config_file,
     dependencies: [
-        dependency('libadwaita-1'),
+        dependency('libadwaita-1', version: '>=1.4.0'),
         dependency('glib-2.0'),
         dependency('gio-2.0'),
         dependency('gobject-2.0'),
