--- a/data/bluetooth.metainfo.xml.in
+++ b/data/bluetooth.metainfo.xml.in
@@ -35,6 +35,7 @@
       <description>
         <p>Minor updates</p>
         <ul>
+          <li>Fix missing link to audio settings for some headphones</li>
           <li>Updated translations</li>
         </ul>
       </description>
