--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: io.elementary.settings-bluetooth
+Source: io.elementary.settings.bluetooth
 Section: x11
 Priority: optional
 Maintainer: elementary OS Team <builds@elementary.io>
@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 10.5.1),
 Standards-Version: 4.1.1
 Homepage: https://github.com/elementary/switchboard-plug-bluetooth
 
-Package: io.elementary.settings-bluetooth
+Package: io.elementary.settings.bluetooth
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Enhances: switchboard
