--- a/data/bluetooth.metainfo.xml.in
+++ b/data/bluetooth.metainfo.xml.in
@@ -31,6 +31,15 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.1" date="2024-10-20" urgency="medium">
+      <description>
+        <p>Minor updates</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+    
     <release version="8.0.0" date="2024-07-24" urgency="medium">
       <description>
         <p>Minor updates</p>
