--- a/data/bluetooth.metainfo.xml.in
+++ b/data/bluetooth.metainfo.xml.in
@@ -31,6 +31,19 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.2" date="2025-06-18" urgency="medium">
+      <description>
+        <p>Minor updates</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/switchboard-plug-bluetooth/issues/192">Incorrect "DISPLAY_PASSKEY" prompt used for bluetooth keyboard pairing</issue>
+        <issue url="https://github.com/elementary/switchboard-plug-bluetooth/issues/200">The buttons of the Bluetooth password confirmation window do not work</issue>
+      </issues>
+    </release>
+
     <release version="8.0.1" date="2024-10-21" urgency="medium">
       <description>
         <p>Minor updates</p>
